<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CHARS for Pathfinder ACG</string>
    
    <string name="new_ror">Rise of the Rune Lords</string>
    <string name="new_sas">Skulls and Shackles</string>
    <string name="new_wor">Wrath of the Righteous</string>
    <string name="new_cd">Character Decks</string>
    <string name="new_bard_cd">New Bard (CD)</string>
    <string name="new_cleric_cd">New Cleric (CD)</string>
    <string name="new_fighter_cd">New Fighter (CD)</string>
    <string name="new_paladin_cd">New Paladin (CD)</string>
    <string name="new_ranger_cd">New Ranger (CD)</string>
    <string name="new_rogue_cd">New Rogue (CD)</string>
    <string name="new_sorcerer_cd">New Sorcerer (CD)</string>
    <string name="new_wizard_cd">New Wizard (CD)</string>

    <string name="new_monk">New Monk (RoR)</string>
    <string name="new_paladin">New Paladin (RoR)</string>
    <string name="new_wizard">New Wizard (RoR)</string>
    <string name="new_fighter">New Fighter (RoR)</string>
    <string name="new_sorceress">New Sorceress (RoR)</string>
    <string name="new_rogue">New Rogue (RoR)</string>
    <string name="new_ranger">New Ranger (RoR)</string>
    <string name="new_bard">New Bard (RoR)</string>
    <string name="new_cleric">New Cleric (RoR)</string>
    <string name="new_druid">New Druid (RoR)</string>
    <string name="new_barbarian">New Barbarian (RoR)</string>
    
    <string name="new_raider_ss">New Raider (SaS)</string>
    <string name="new_oracle_ss">New Oracle (SaS)</string>
    <string name="new_swashbuckler_ss">New Swashbuckler (SaS)</string>
    <string name="new_bard_ss">New Bard (SaS)</string>
    <string name="new_gunslinger_ss">New Gunslinger (SaS)</string>
    <string name="new_rogue_ss">New Rogue (SaS)</string>
    <string name="new_magus_ss">New Magus (SaS)</string>
    <string name="new_fighter_ss">New Fighter (SaS)</string>
    <string name="new_alchemist_ss">New Alchemist (SaS)</string>
    <string name="new_witch_ss">New Witch (SaS)</string>
    <string name="new_druid_ss">New Druid (SaS)</string>
    <string name="new_warpriest_ss">New Warpriest (SaS)</string>

    <string name="new_cavalier_wr">New Cavalier (WoR)</string>
    <string name="new_summoner_wr">New Summoner (WoR)</string>
    <string name="new_arcanist_wr">New Arcanist (WoR)</string>
    <string name="new_ranger_wr">New Ranger (WoR)</string>
    <string name="new_inquisitor_wr">New Inquisiter (WoR)</string>
    <string name="new_cleric_wor">New Cleric (WoR)</string>
    <string name="new_paladin_wor">New Paladin (WoR)</string>
    <string name="new_hunter_wor">New Hunter (WoR)</string>
    <string name="new_bloodrager_wr">New Bloodrager (WoR)</string>
    <string name="new_sorcerer_wr">New Sorceress (WoR)</string>
    <string name="new_shaman_wr">New Shaman (WoR)</string>

    <string name="new_bekah_cd">New Bekah (CD)</string>
    <string name="new_lem_cd">New Lem (CD)</string>
    <string name="new_meliski">New Meliski (CD)</string>
    <string name="new_siwar">New Siwar (CD)</string>

    <string name="new_flenta_cd">New Flenta (CD)</string>
    <string name="new_tontelizi_cd">New Tontelizi (CD)</string>
    <string name="new_valeros_cd">New Valeros (CD)</string>
    <string name="new_vika_cd">New Vika (CD)</string>

    <string name="new_koren_cd">New Koren (CD)</string>
    <string name="new_raz_cd">New Raz (CD)</string>
    <string name="new_seelah_cd">New Seelah (CD)</string>

    <string name="new_agna_cd">New Agna (CD)</string>
    <string name="new_arabundi_cd">New Arabundi (CD)</string>
    <string name="new_harsk_cd">New Harsk (CD)</string>
    <string name="new_wrathack_cd">New Wrathack (CD)</string>

    <string name="new_lesath_cd">New Lesath (CD)</string>
    <string name="new_merisiel_cd">New Merisiel (CD)</string>
    <string name="new_olenjack_cd">New Olenjack (CD)</string>
    <string name="new_wu_shen_cd">New Wu Shen (CD)</string>

    <string name="delete_character">Delete</string>
    
    <string name="skills_detail_label">Skill Feats:</string>
    <string name="powers_detail_label">Power Feats:</string>
    <string name="cards_detail_label">Card Feats:</string>
    <string name="progress_label">Adventure Progress:</string>
    <string name="take">Take</string>
    <string name="rate_my_app">Rate This App</string>

</resources>
