<menu xmlns:tools="http://schemas.android.com/tools"
	xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:showAsAction="never"
		tools:ignore="AppCompatResource">
        <!--  Rise of the Rune Lords -->
    	<item android:id="@+id/menu_item_new_ror"
    	    android:title="@string/new_ror">
    	<menu><group>
		    <item android:id="@+id/menu_item_new_barbarian"
			    android:title="@string/new_barbarian" />
		    <item android:id="@+id/menu_item_new_bard"
			    android:title="@string/new_bard"/>	    	
		    <item android:id="@+id/menu_item_new_cleric"
			    android:title="@string/new_cleric"/>
		    <item android:id="@+id/menu_item_new_druid"
			    android:title="@string/new_druid"/>
		    <item android:id="@+id/menu_item_new_fighter"
			    android:title="@string/new_fighter"/>
			<item android:id="@+id/menu_item_new_monk"
			    android:title="@string/new_monk"/>
			<item android:id="@+id/menu_item_new_paladin"
			    android:title="@string/new_paladin"/>
			<item android:id="@+id/menu_item_new_ranger"
			    android:title="@string/new_ranger"/>
			<item android:id="@+id/menu_item_new_rogue"
			    android:title="@string/new_rogue"/>
			<item android:id="@+id/menu_item_new_sorceress"
			    android:title="@string/new_sorceress"/>
			<item android:id="@+id/menu_item_new_wizard"
			    android:title="@string/new_wizard"/>
		</group></menu>
		</item>
    	<item android:id="@+id/menu_item_new_sas"
    	    android:title="@string/new_sas">
    	    <menu><group>
    	        <item android:id="@+id/menu_item_new_raider_ss"
			    android:title="@string/new_raider_ss" />
		    <item android:id="@+id/menu_item_new_bard_ss"
			    android:title="@string/new_bard_ss"/>	    	
		    <item android:id="@+id/menu_item_new_oracle_ss"
			    android:title="@string/new_oracle_ss"/>
		    <item android:id="@+id/menu_item_new_druid_ss"
			    android:title="@string/new_druid_ss"/>
		    <item android:id="@+id/menu_item_new_fighter_ss"
			    android:title="@string/new_fighter_ss"/>
			<item android:id="@+id/menu_item_new_swashbucker_ss"
			    android:title="@string/new_swashbuckler_ss"/>
			<item android:id="@+id/menu_item_new_gunslinger_ss"
			    android:title="@string/new_gunslinger_ss"/>
			<item android:id="@+id/menu_item_new_magus_ss"
			    android:title="@string/new_magus_ss"/>
			<item android:id="@+id/menu_item_new_rogue_ss"
			    android:title="@string/new_rogue_ss"/>
			<item android:id="@+id/menu_item_new_alchemist_ss"
			    android:title="@string/new_alchemist_ss"/>
			<item android:id="@+id/menu_item_new_witch_ss"
			    android:title="@string/new_witch_ss"/>
			<item android:id="@+id/menu_item_new_warpriest_ss"
			    android:title="@string/new_warpriest_ss"/>
    	    </group></menu>
    	</item>
		<item android:id="@+id/menu_item_new_wor"
			android:title="@string/new_wor">
			<menu><group>
				<item android:id="@+id/menu_item_new_cavalier_wr"
					android:title="@string/new_cavalier_wr" />
				<item android:id="@+id/menu_item_new_summoner_wr"
					android:title="@string/new_summoner_wr"/>
				<item android:id="@+id/menu_item_new_arcanist_wr"
					android:title="@string/new_arcanist_wr"/>
				<item android:id="@+id/menu_item_new_ranger_wr"
					android:title="@string/new_ranger_wr"/>
				<item android:id="@+id/menu_item_new_inquisitor_wr"
					android:title="@string/new_inquisitor_wr"/>
				<item android:id="@+id/menu_item_new_cleric_wr"
					android:title="@string/new_cleric_wor"/>
				<item android:id="@+id/menu_item_new_paladin_wr"
					android:title="@string/new_paladin_wor"/>
				<item android:id="@+id/menu_item_new_hunter_wr"
					android:title="@string/new_hunter_wor"/>
				<item android:id="@+id/menu_item_new_bloodrager_wr"
					android:title="@string/new_bloodrager_wr"/>
				<item android:id="@+id/menu_item_new_sorcerer_wr"
					android:title="@string/new_sorcerer_wr"/>
				<item android:id="@+id/menu_item_new_shaman_wr"
					android:title="@string/new_shaman_wr"/>
			</group></menu>
		</item>
		<item android:id="@+id/menu_item_new_mm" android:title="Mummy's Mask">
			<menu><group>
				<item android:id="@+id/menu_item_new_oracle_mm"
					android:title="New Oracle (MM)" />
			</group></menu>
		</item>
		<item android:id="@+id/menu_item_new_cd"
			android:title="@string/new_cd">
			<menu><group>
				<item android:title="@string/new_bard_cd">
					<menu><group>
						<item android:title="@string/new_bekah_cd"
							android:id="@+id/menu_item_new_bekah_cd"/>
						<item android:title="@string/new_lem_cd"
							android:id="@+id/menu_item_new_lem_cd"/>
						<item android:title="@string/new_meliski"
							android:id="@+id/menu_item_new_meliski_cd"/>
						<item android:title="@string/new_siwar"
							android:id="@+id/menu_item_new_siwar_cd"/>
					</group></menu>
				</item>
				<item android:title="@string/new_fighter_cd">
					<menu><group>
						<item android:title="@string/new_flenta_cd"
							android:id="@+id/menu_item_new_flenta_cd"/>
						<item android:title="@string/new_tontelizi_cd"
							android:id="@+id/menu_item_new_tontelizi_cd"/>
						<item android:title="@string/new_valeros_cd"
							android:id="@+id/menu_item_new_valeros_cd"/>
						<item android:title="@string/new_vika_cd"
							android:id="@+id/menu_item_new_vika_cd"/>
					</group></menu>
				</item>
				<item android:title="@string/new_paladin_cd">
					<menu><group>
						<item android:title="@string/new_koren_cd"
							android:id="@+id/menu_item_new_koren_cd"/>
						<item android:title="@string/new_raz_cd"
							android:id="@+id/menu_item_new_raz_cd"/>
						<item android:title="@string/new_seelah_cd"
							android:id="@+id/menu_item_new_seelah_cd"/>
					</group></menu>
				</item>

				<item android:title="@string/new_ranger_cd">
					<menu><group>
						<item android:title="@string/new_agna_cd"
							android:id="@+id/menu_item_new_agna_cd" />
						<item android:title="@string/new_arabundi_cd"
							android:id="@+id/menu_item_new_arabundi_cd" />
						<item android:title="@string/new_harsk_cd"
							android:id="@+id/menu_item_new_harsk_cd" />
						<item android:title="@string/new_wrathack_cd"
							android:id="@+id/menu_item_new_wrathack_cd" />
					</group></menu>
				</item>
				<item android:title="@string/new_rogue_cd">
					<menu><group>
						<item android:title="@string/new_lesath_cd"
							android:id="@+id/menu_item_new_lesath_cd" />
						<item android:title="@string/new_merisiel_cd"
							android:id="@+id/menu_item_new_merisiel_cd" />
						<item android:title="@string/new_olenjack_cd"
							android:id="@+id/menu_item_new_olenjack_cd"/>
						<item android:title="@string/new_wu_shen_cd"
							android:id="@+id/menu_item_new_wu_shen_cd"/>
					</group></menu>
				</item>
				<!--
				<item android:title="@string/new_sorcerer_cd"/>
				<item android:title="@string/new_wizard_cd"/>
				-->
			</group></menu>
		</item>
		<item android:id="@+id/rate_my_app"
			android:title="@string/rate_my_app"/>
	</group>
	
</menu>
