<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        
       	<LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    
	    <LinearLayout
	        android:baselineAligned="false"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginLeft="16dp"
	        android:layout_marginRight="16dp">
	        
	        <LinearLayout 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:layout_marginRight="4dp">
	            
	            <ImageView
	                android:baselineAligned="false"
	                android:id="@+id/character_imageView"
	                android:layout_width="80dp"
	                android:layout_height="80dp"
	                android:scaleType="centerInside"
	                android:background="@android:color/darker_gray"
	                android:cropToPadding="true"/>
	            
	            <ImageButton 
	                android:baselineAligned="false"
	                android:id="@+id/character_imageButton"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:src="@android:drawable/ic_menu_camera"/>
	        </LinearLayout>
	    
	        <LinearLayout
	            android:baselineAligned="false"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:layout_weight="1">
	            
		        <EditText
		            android:id="@+id/pc_name"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:hint="Enter Name"/>
		        <RelativeLayout
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal">
			    <TextView
			        android:id="@+id/pc_role"
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:textAppearance="?android:attr/textAppearanceMedium"
			        android:text="Role" />
			    
			    <ImageButton 
	                android:baselineAligned="false"
	                android:id="@+id/character_roleButton"
	                android:layout_width="wrap_content"
	                android:layout_height="match_parent"
	                android:layout_alignParentRight="true"
	                android:src="@android:drawable/ic_input_add"/>
			    </RelativeLayout>
		    </LinearLayout>
	    </LinearLayout>
	    
	   	<TextView
       	    android:id="@+id/skills_header"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@color/pf_darkgreen"
	        android:textColor="@color/white"
	        android:paddingTop="1dp"
	        android:paddingBottom="1dp"
	        android:text="@string/skills_detail_label"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        style="?android:listSeparatorTextViewStyle"/>
	    	       	
	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="16dp"
	        android:layout_marginRight="16dp"
	        android:id="@+id/skills_layout">

	       	<TableLayout
	       	    android:id="@+id/skills_table"
	       	    android:layout_alignParentTop="true"
	       	    android:layout_width="wrap_content"
	       	    android:layout_height="wrap_content">
	       	
		       	<TableRow
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content">
			        
			       	<TextView
			       	    android:id="@+id/str_title"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:textAppearance="?android:attr/textAppearanceMedium"
		                android:text="Strength:" />
		
		            <TextView
		                android:id="@+id/str_base"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginLeft="4dp"
		                android:text="1d6"
		                android:textAppearance="?android:attr/textAppearanceMedium" />
		
		            <Spinner
		                android:id="@+id/str_bonus"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_weight="1" />
		       	</TableRow>

				<TableRow
					android:id="@+id/str_skills"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"/>

		       	<TableRow
		       	    android:layout_width="match_parent"
		       	    android:layout_height="wrap_content">
		       	    
		       	    <TextView
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:textAppearance="?android:attr/textAppearanceMedium"
		                android:text="Dexterity:" />
		            
		            <TextView
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="4dp"
			            android:text="1d6"
			            android:textAppearance="?android:attr/textAppearanceMedium"
			            android:id="@+id/dex_base"/>
		
		            <Spinner
		                android:id="@+id/dex_bonus"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:layout_weight="1" />
		       	</TableRow>

				<TableRow
					android:id="@+id/dex_skills"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"/>

		       	<TableRow
		       	    android:layout_width="match_parent"
		       	    android:layout_height="wrap_content">
		       	    <TextView
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:textAppearance="?android:attr/textAppearanceMedium"
		                android:text="Constitution:" />
		            
		            <TextView
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:text="1d6"
			            android:layout_marginLeft="4dp"
			            android:textAppearance="?android:attr/textAppearanceMedium"
			            android:id="@+id/con_base"/>
		
		            <Spinner
		                android:id="@+id/con_bonus"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:layout_weight="1" />
		       	</TableRow>

				<TableRow
					android:id="@+id/con_skills"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"/>

		       	<TableRow 
		       	    android:layout_width="match_parent"
		       	    android:layout_height="wrap_content">
		       	    
		       	    <TextView
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:textAppearance="?android:attr/textAppearanceMedium"
		                android:text="Intelligence:" />
		            
		            <TextView
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="4dp"
			            android:textAppearance="?android:attr/textAppearanceMedium"
			            android:text="1d6"
			            android:id="@+id/int_base"/>
		
		            <Spinner
		                android:id="@+id/int_bonus"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:layout_weight="1" />
		       	</TableRow>

				<TableRow
					android:id="@+id/int_skills"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"/>

		       <TableRow 
		           android:layout_width="match_parent"
		           android:layout_height="wrap_content">
		           <TextView
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:textAppearance="?android:attr/textAppearanceMedium"
		                android:text="Wisdom:" />
		            
		            <TextView
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:text="1d6"
			            android:layout_marginLeft="4dp"
			            android:textAppearance="?android:attr/textAppearanceMedium"
			            android:id="@+id/wis_base"/>
		
		            <Spinner
		                android:id="@+id/wis_bonus"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:layout_weight="1" />
		       </TableRow>

				<TableRow
					android:id="@+id/wis_skills"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"/>

		       <TableRow
		           android:layout_width="match_parent"
		           android:layout_height="wrap_content">
		           <TextView
		               android:id="@+id/cha_text"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:textAppearance="?android:attr/textAppearanceMedium"
		                android:text="Charisma:" />
		            
		            <TextView
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:text="1d6"
			            android:layout_marginLeft="4dp"
			            android:textAppearance="?android:attr/textAppearanceMedium"
			            android:id="@+id/cha_base"/>
		
		            <Spinner
		                android:id="@+id/cha_bonus"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:layout_weight="1" />
		       </TableRow>

				<TableRow
					android:id="@+id/cha_skills"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"/>

	       	</TableLayout>
	    </RelativeLayout>

	  	<TextView 
		        android:id="@+id/powers_header"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@color/pf_darkgreen"
		        android:textColor="@color/white"
		        android:paddingTop="1dp"
		        android:paddingBottom="1dp"
		        android:text="@string/powers_detail_label"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        style="?android:listSeparatorTextViewStyle"/>
	  	
	    <RelativeLayout
	        android:id="@+id/powers_layout"
	        android:layout_marginLeft="16dp"
	        android:layout_marginRight="16dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
  
		    <TableLayout
		        android:id="@+id/powers_table"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentTop="true">
		       
		        <TableRow 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content">
		            <TextView 
			            android:layout_height="wrap_content"
			            android:layout_width="match_parent"
			            android:textAppearance="?android:attr/textAppearanceMedium"
			            android:text="Hand Limit:"/>
			        <Spinner
			            android:id="@+id/hand_limit"
			            android:layout_width="0dp"
			            android:layout_height="wrap_content"
			            android:layout_weight="1"/>
		        </TableRow>
		        <TableRow
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content">
			        
			        <Spinner
			            android:id="@+id/proficieny"
			            android:layout_width="0dp"
			            android:layout_height="wrap_content"
			            android:layout_weight="1"/>
		        </TableRow>       
		    </TableLayout>
		    
		    <LinearLayout
		        android:layout_below="@id/powers_table"
		        android:id="@+id/role_powers_layout"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical" />
	    </RelativeLayout>

	    
	    
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@color/pf_darkgreen"
	        android:textColor="@color/white"
	        android:paddingTop="1dp"
	        android:paddingBottom="1dp"
	        android:text="@string/cards_detail_label"
	        android:id="@+id/favored_card"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        style="?android:listSeparatorTextViewStyle"/>
	    
	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="16dp"
	        android:layout_marginRight="16dp">
		    
		    <TableLayout
		        android:layout_alignParentTop="true"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >
		        <TableRow 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content">
			        <TextView
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:textAppearance="?android:attr/textAppearanceMedium"
			            android:text="Weapons:" />
	
			        <Spinner
			            android:id="@+id/weapons"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_weight="1" />
		        </TableRow>
	        	<TableRow 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content">
	
			        <TextView
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:textAppearance="?android:attr/textAppearanceMedium"
			            android:text="Armors:" />
	
			        <Spinner
			            android:id="@+id/armor"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_weight="1" />
			     </TableRow>
			     <TableRow 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content">		    

			        <TextView
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:textAppearance="?android:attr/textAppearanceMedium"
			            android:text="Spells:" />
	
			        <Spinner
			            android:id="@+id/spells"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_weight="1" />
			     </TableRow>
			     
			     <TableRow 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content">

			        <TextView
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:textAppearance="?android:attr/textAppearanceMedium"
			            android:text="Items:" />
	
			        <Spinner
			            android:id="@+id/items"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_weight="1" />
			    </TableRow>
			    <TableRow 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content">

			        <TextView
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:textAppearance="?android:attr/textAppearanceMedium"
			            android:text="Allies:" />
	
			        <Spinner
			            android:id="@+id/allies"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_weight="1" />
			    </TableRow>
			    <TableRow 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content">

			        <TextView
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:textAppearance="?android:attr/textAppearanceMedium"
			            android:text="Blessings:" />
	
			        <Spinner
			            android:id="@+id/blessings"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_weight="1" />
		        </TableRow>
	        </TableLayout>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pf_darkgreen"
            android:textColor="@color/white"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:text="@string/progress_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            style="?android:listSeparatorTextViewStyle"/>
		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp">
        	<TableLayout
            	android:id="@+id/progress_layout"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content">
            	<TableRow>
                	<TextView
						android:id="@+id/ror_progress_title"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="Rise of the Rune Lords:"/>
					<Spinner
						android:id="@+id/ror_progress_spinner"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"/>
            	</TableRow>
				<TableRow>
					<TextView
						android:id="@+id/sos_progress_title"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="Swords and Shackles:"/>
					<Spinner
						android:id="@+id/sos_progress_spinner"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"/>
				</TableRow>
				<TableRow>
					<TextView
						android:id="@+id/wor_progress_title"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="Wrath of the Righteous:"/>
					<Spinner
						android:id="@+id/wor_progress_spinner"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"/>
				</TableRow>


         	</TableLayout>
		</RelativeLayout>
	 </LinearLayout>
  </ScrollView>
</LinearLayout>
